# remora-gui

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: prd.md  todo.md
src/remora_gui/: __main__.py  app.py
src/remora_gui/core/: execution.py  export.py  input_file.py  output_reader.py  param_diff.py  parameter_schema.py  project.py  remote.py  settings.py  sweep.py  templates.py  validator.py
src/remora_gui/resources/: style.qss
src/remora_gui/templates/: advection.json  blank.json  double_gyre.json  seamount.json  upwelling.json
src/remora_gui/ui/: main_window.py
src/remora_gui/ui/config_editor/: advection_panel.py  base_panel.py  boundary_panel.py  config_tab.py  domain_panel.py  mixing_panel.py  output_panel.py  parallel_panel.py  physics_panel.py  raw_editor.py  timing_panel.py
src/remora_gui/ui/dialogs/: machine_config_dialog.py  new_project_dialog.py  param_diff_dialog.py  preferences_dialog.py  sweep_dialog.py  template_picker_dialog.py
src/remora_gui/ui/execution/: log_viewer.py  run_panel.py
src/remora_gui/ui/project/: project_browser.py  run_history.py
src/remora_gui/ui/visualization/: output_tab.py  slice_viewer.py  timeseries_viewer.py  variable_explorer.py
src/remora_gui/ui/widgets/: collapsible_group.py  enum_combo.py  file_picker.py  (+2 more)
tests/: test_execution.py  test_export.py  test_input_file.py  test_output_reader.py  test_param_diff.py  test_parameter_schema.py  test_project.py  test_remote.py  test_settings.py  test_sweep.py  test_templates.py  test_validator.py  test_widgets.py
tests/fixtures/: upwelling_inputs
