[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remora-gui"
version = "0.1.0"
description = "GUI wrapper for the REMORA ocean modeling system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Connor Mack", email = "cjmack@ucsd.edu" },
]

dependencies = [
    "PyQt6>=6.5",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "xarray>=2023.0",
    "netCDF4>=1.6",
    "paramiko>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0",
]

[project.scripts]
remora-gui = "remora_gui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/remora_gui"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["*.qss"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "PyQt6.*",
    "matplotlib.*",
    "xarray.*",
    "netCDF4.*",
    "paramiko.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt6"
